--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Galuh Satria</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -183,6 +183,6 @@
         cursorChar: "",
       });
     </script>
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
