--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a href="#about" class="menu-link hover:text-primary">About</a></li>
             <li><a href="#project" class="menu-link hover:text-primary">Project</a></li>
             <li><a href="#certificate" class="menu-link hover:text-primary">Certificate</a></li>
-            <li><a href="" class="menu-link hover:text-primary">Contact</a></li>
+            <li><a href="#contact" class="menu-link hover:text-primary">Contact</a></li>
           </ul>
         </div>
       </div>
