--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <h1 class="font-bold text-3xl lg:text-start text-center lg:h-5 h-20" id="element"></h1>
           <p class="max-w-md lg:text-start text-center">A Passionate Front-End Developer. Based in Lombok, Indonesia</p>
           <div class="social-media flex text-2xl gap-4 lg:justify-start justify-center">
-            <a href=""><i class="bi bi-github"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/galuhsatria"><i class="bi bi-github"></i></a>
+            <a href="https://linkedin/in/galuh-satria-1002484210"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
         <div class="">
@@ -162,10 +162,9 @@
     <footer class="bg-secondary">
       <div class="lg:mx-10 lg:px-20 px:0 w-full py-10 gap-5 text-slate-600 flex justify-between lg:flex-row flex-col items-center">
         <div class="social-media flex gap-4">
-          <a href=""><i class="bi bi-instagram text-xl hover:text-primary"></i></a>
-          <a href=""><i cimage.pnglass="bi bi-youtube text-xl hover:text-primary"></i></a>
-          <a href=""><i class="bi bi-twitter text-xl hover:text-primary"></i></a>
-          <a href=""><i class="bi bi-facebook text-xl hover:text-primary"></i></a>
+          <a href="https://www.instagram.com/galuhsatria._/"><i class="bi bi-instagram text-xl hover:text-primary"></i></a>
+          <a href="https://youtube.com/galuhsatria"><i cimage.pnglass="bi bi-youtube text-xl hover:text-primary"></i></a>
+          <a href="https://twitter.com/Galuhsatria13?t=oUtoRLbV2Rc3Cj87K3PlCA&s=09"><i class="bi bi-twitter text-xl hover:text-primary"></i></a>
         </div>
         <p class="text-base">Galuh Satria 2023 All Right Reserved</p>
       </div>
