--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
           <img src="/asset/about-img.png" alt="" class="w-96 profil" />
         </div>
         <div class="max-w-lg text-justify">
-          <p class="">
-           Hi My Name Is Galuh Satria, a front-end developer. You can call me Galuh. Recenlty, Im learning React. Now Im studying at a university in Lombok, Nusa Tengara Barat majoring in computer sience</p>
-           <p class="mt-3"> I like to explore some new tech stuf and editing video. btw i have a youtube channel  with video editing tutorial content, now i have more then 3K subscribers you can check it here <a href="https://youtube.com/galuhsatria" class="text-primary">Galuh Satria</a>
+          <p class="">Hi My Name Is Galuh Satria, a front-end developer. You can call me Galuh. Recenlty, Im learning React. Now Im studying at a university in Lombok, Nusa Tengara Barat majoring in computer sience</p>
+          <p class="mt-3">
+            I like to explore some new tech stuf and editing video. btw i have a youtube channel with video editing tutorial content, now i have more then 3K subscribers you can check it here
+            <a href="https://youtube.com/galuhsatria" class="text-primary">Galuh Satria</a>
           </p>
         </div>
       </div>
@@ -100,35 +101,8 @@
 
     <section id="project" class="pt-16">
       <h1 class="text-3xl font-bold text-primary text-center mb-9 pt-6">Project Portfolio</h1>
-      <div class="flex flex-wrap gap-6 text-white mx-4 justify-center items-center">
-        <div class="bg-secondary p-4 rounded-md flex flex-col gap-5" data-aos="fade-up" data-aos-duration="1000">
-          <div class="thumniel w-60 h-32">
-            <a href="https://whatsapp-messages-helper.vercel.app/"><img src="/asset/wa-helper.png" alt="" class="rounded-md w-60 h-32  object-cover" /></a>
-          </div>
-          <p class="text-center text-primary">WhatsApp Message Helper</p>
-          <div class="tech-stack flex gap-5">
-            <img src="/asset/reactjs.png" alt="" class="w-10" />
-            <img src="/asset/Tailwind_CSS_Logo.svg.png" alt="" class="w-10" />
-          </div>
-          <div class="flex gap-5 ">
-            <a href="https://github.com/galuhsatria/whatsapp-messages-helper" class="hover:text-primary">Repository <i class="bi bi-github"></i></a>
-            <a href="https://whatsapp-messages-helper.vercel.app/" class="hover:text-primary">Live Demo <i class="bi bi-box-arrow-in-up-right"></i></a>
-          </div>
-        </div>
-        <div class="bg-secondary p-4  rounded-md flex flex-col gap-5" data-aos="fade-up" data-aos-duration="1500">
-          <div class="thumniel w-60 h-32">
-            <img src="/asset/alquran-app.png" alt="" class="object-cover h-32 w-60 rounded-md" />
-          </div>
-          <p class="text-center text-primary">Al-Quran App</p>
-          <div class="tech-stack flex gap-5">
-            <img src="/asset/reactjs.png" alt="" class="w-10" />
-            <img src="/asset/Tailwind_CSS_Logo.svg.png" alt="" class="w-10" />
-          </div>
-          <div class="flex gap-5">
-            <a href="https://github.com/galuhsatria/quran-app" class="hover:text-primary">Repository <i class="bi bi-github"></i></a>
-            <a href="https://galuhsatria-quran-app.vercel.app/" class="hover:text-primary">Live Demo <i class="bi bi-box-arrow-in-up-right"></i></a>
-          </div>
-        </div>
+
+      <div class="flex flex-wrap gap-6 text-white mx-4 justify-center items-center" id="listProject"></div>
     </section>
 
     <section class="pt-20" id="certificate">
