--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </script>
     <script>
       var typed = new Typed("#element", {
-        strings: ["<i>Hi Im</i> Galuh.", "Front-End Developer &#128075;&#127995;."],
+        strings: ["Hi I'm <i>Galuh</i> .", "Front-End Developer &#128075;&#127995;."],
         typeSpeed: 50,
         loop: true,
         cursorChar: "",
