--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="">
-          <img src="/asset/profil.png" alt="" class="profil lg:w-96 w-80" />
+          <img src="/asset/profil.png" alt="" class="profil lg:w-96 w-80" id="profile"/>
         </div>
       </div>
     </section>
