--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="bg-secondary w-72 text-center text-white px-10 py-8 rounded-md flex flex-col gap-3">
           <i class="bi bi-envelope text-4xl text-primary"></i>
           <p class="font-bold text-xl">Mail</p>
-          <p class="text-lg text-primary">galuhsatria219@gmail.com</p>
+          <a class="text-lg text-primary" href="mailto:galuhsatria219@gmail.com">galuhsatria219@gmail.com</a>
         </div>
         <div class="bg-secondary w-72 text-center text-white px-10 py-8 rounded-md flex flex-col gap-3">
           <i class="bi bi-geo-alt-fill text-4xl text-primary"></i>
