--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="">
-          <img src="/asset/profil.png" alt="" class="profil lg:w-96 w-80" id="profile"/>
+          <img src="/asset/profil.png" alt="" class="profil lg:w-96 w-80" id="profile" loading="lazy"/>
         </div>
       </div>
     </section>
@@ -87,7 +87,7 @@
       <h1 class="text-primary font-bold text-3xl text-center pt-20">About</h1>
       <div class="flex text-white justify-center pt-16 gap-20 items-center lg:flex-row flex-col mx-10" data-aos="fade-up">
         <div>
-          <img src="/asset/about-img.png" alt="" class="w-96 profil" />
+          <img src="/asset/about-img.png" alt="" class="w-96 profil" loading="lazy"/>
         </div>
         <div class="max-w-lg text-justify">
           <p class="">Hi My Name Is Galuh Satria, a front-end developer. You can call me Galuh. Recenlty, Im learning React. Now Im studying at a university in Lombok, Nusa Tengara Barat majoring in computer sience</p>
