--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
+     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/96463812?v=4">
     <script>
       tailwind.config = {
         theme: {
